--- a/index.html
+++ b/index.html
@@ -142,22 +142,22 @@
                 </div>
                 <div>
                     <ul class="category-list">
-                        <a href="file:///Users/yasuaki.okamoto/Desktop/encounter-tinder/category1.html">
+                        <a href="https://yasu-works.github.io/test-up1/category1.html">
                             <li class="category-item category-img1">
                                 <p>カテゴリ名</p>
                             </li>
                         </a>
-                        <a href="file:///Users/yasuaki.okamoto/Desktop/encounter-tinder/category2.html">
+                        <a href="https://yasu-works.github.io/test-up1/category2.html">
                             <li class="category-item category-img2">
                                 <p>カテゴリ名</p>
                             </li>
                         </a>
-                        <a href="file:///Users/yasuaki.okamoto/Desktop/encounter-tinder/category3.html">
+                        <a href="https://yasu-works.github.io/test-up1/category3.html">
                             <li class="category-item category-img3">
                                 <p>カテゴリ名</p>
                             </li>
                         </a>
-                        <a href="file:///Users/yasuaki.okamoto/Desktop/encounter-tinder/category4.html">
+                        <a href="https://yasu-works.github.io/test-up1/category4.html">
                             <li class="category-item category-img4">
                                 <p>カテゴリ名</p>
                             </li>
