--- a/category1.html
+++ b/category1.html
@@ -17,8 +17,10 @@
     <header id="header">
         <div class="header-wrapper">
             <div class="site-title">
-                <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
-                <h1>Tinderで出会ってみた</h1>
+                <a href="https://yasu-works.github.io/test-up1/">
+                    <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
+                    <h1>Tinderで出会ってみた</h1>
+                </a>
             </div>
 
             <!-- ハンバーガーメニューボタン -->
@@ -55,8 +57,10 @@
             <section class="archive-title category-bottom">
                 <!-- カテゴリタイトル：PC表示 -->
                 <div class="category-title-block-pc">
-                    <img class="category-title-img-pc" src="https://yasu-works.github.io/test-up1/category-img-pc1.png" alt="カテゴリタイトルPC表示">
-                    <h2 class="category-title-pc">カテゴリ名</h2>
+                    <a href="https://yasu-works.github.io/test-up1/">
+                        <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
+                        <h1>Tinderで出会ってみた</h1>
+                    </a>
                 </div>
 
                 <!-- カテゴリタイトル：SP表示 -->
