--- a/category3.html
+++ b/category3.html
@@ -17,8 +17,10 @@
     <header id="header">
         <div class="header-wrapper">
             <div class="site-title">
-                <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
-                <h1>Tinderで出会ってみた</h1>
+                <a href="https://yasu-works.github.io/test-up1/">
+                    <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
+                    <h1>Tinderで出会ってみた</h1>
+                </a>
             </div>
 
             <!-- ハンバーガーメニューボタン -->
