--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Tinderで出会ってみた">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://yasu-works.github.io/test-up1/icons8.png">
+    <link rel="icon" href="https://yasu-works.github.io/coconara-works2/icons8.png">
     <!-- タイトル名 -->
     <title>利用規約|Tinderで出会ってみた</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -17,8 +17,8 @@
     <header id="header">
         <div class="header-wrapper">
             <div class="site-title">
-                <a href="https://yasu-works.github.io/test-up1/">
-                    <img class="icon" src="https://yasu-works.github.io/test-up1/icons8.png" alt="Tinder白アイコン">
+                <a href="https://yasu-works.github.io/coconara-works2/">
+                    <img class="icon" src="https://yasu-works.github.io/coconara-works2/icons8.png" alt="Tinder白アイコン">
                     <h1>Tinderで出会ってみた</h1>
                 </a>
             </div>
@@ -36,17 +36,17 @@
             <!-- PC用ハンバーガーメニュー -->
             <nav>
                 <ul class="pc-navmenu">
-                    <li><a href="https://yasu-works.github.io/test-up1">ホーム</a></li>
-                    <li><a href="https://yasu-works.github.io/test-up1/archive.html">記事一覧</a></li>
-                    <li><a href="https://yasu-works.github.io/test-up1/terms-of-service.html">利用規約</a></li>
+                    <li><a href="https://yasu-works.github.io/coconara-works2">ホーム</a></li>
+                    <li><a href="https://yasu-works.github.io/coconara-works2/archive.html">記事一覧</a></li>
+                    <li><a href="https://yasu-works.github.io/coconara-works2/terms-of-service.html">利用規約</a></li>
                 </ul>
             </nav>
 
             <!-- SP用ハンバーガーメニュー -->
             <ul id="menu" class="menu-sp">
-                <li><a href="https://yasu-works.github.io/test-up1">ホーム</a></li>
-                <li><a href="https://yasu-works.github.io/test-up1/archive.html">記事一覧</a></li>
-                <li><a href="https://yasu-works.github.io/test-up1/terms-of-service.html">利用規約</a></li>
+                <li><a href="https://yasu-works.github.io/coconara-works2">ホーム</a></li>
+                <li><a href="https://yasu-works.github.io/coconara-works2/archive.html">記事一覧</a></li>
+                <li><a href="https://yasu-works.github.io/coconara-works2/terms-of-service.html">利用規約</a></li>
             </ul>
         </div>
     </header>
@@ -171,7 +171,7 @@
                 <!-- ブログタイトル -->
                 <li class="footer-itemlist">
                     <div class="footer-title">
-                        <img src="https://yasu-works.github.io/test-up1/icons8.png" alt="">
+                        <img src="https://yasu-works.github.io/coconara-works2/icons8.png" alt="">
                         <h1>Tinderで<br>出会ってみた</h1>
                     </div>
                 </li>
@@ -181,10 +181,10 @@
                         <li class="footer-itemlist ft-sitemap">
                             <h3>SITE MAP</h3>
                             <ul class="site-map">
-                                <a href="https://yasu-works.github.io/test-up1"><li>ホーム</li></a>
-                                <a href="https://yasu-works.github.io/test-up1/archive.html"><li>記事一覧</li></a>
-                                <a href="https://yasu-works.github.io/test-up1/blog.html"><li>ブログ</li></a>
-                                <a href="https://yasu-works.github.io/test-up1/terms-of-service.html"><li>利用規約</li></a>
+                                <a href="https://yasu-works.github.io/coconara-works2"><li>ホーム</li></a>
+                                <a href="https://yasu-works.github.io/coconara-works2/archive.html"><li>記事一覧</li></a>
+                                <a href="https://yasu-works.github.io/coconara-works2/blog.html"><li>ブログ</li></a>
+                                <a href="https://yasu-works.github.io/coconara-works2/terms-of-service.html"><li>利用規約</li></a>
                             </ul>
                         </li>
                     </div>
@@ -192,14 +192,14 @@
                         <!-- フッター：プロフィール -->
                         <li class="footer-itemlist ft-profile-center">
                             <h4>PROFILE</h4>
-                            <img class="ft-pr-ic" src="https://yasu-works.github.io/test-up1/profile-img-sample.png" alt="">
+                            <img class="ft-pr-ic" src="https://yasu-works.github.io/coconara-works2/profile-img-sample.png" alt="">
                             <p class="ft-profile-text">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                             <h3 class="ft-link-text">LINK</h3>
                             <!-- SNSアイコンリスト -->
                             <ul class="sns-icon-list">
-                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-ツイッター-50.png" alt=""></a></li>
-                                <li><a href="#"><img src="https://yasu-works.github.io/test-up1/icons8-インスタグラム-50.png" alt=""></a></li>
-                                <li><a href="#"><img class="facebook-icon" src="https://yasu-works.github.io/test-up1/icons8-フェイスブック-64.png" alt=""></a></li>
+                                <li><a href="#"><img src="https://yasu-works.github.io/coconara-works2/icons8-ツイッター-50.png" alt=""></a></li>
+                                <li><a href="#"><img src="https://yasu-works.github.io/coconara-works2/icons8-インスタグラム-50.png" alt=""></a></li>
+                                <li><a href="#"><img class="facebook-icon" src="https://yasu-works.github.io/coconara-works2/icons8-フェイスブック-64.png" alt=""></a></li>
                             </ul>
                         </li>
                     </div>
